# cosutrainer

./: .gitignore  COPYING.md  README.md  build.sh  cosu-trainer.spec  meson.build
.github/workflows/: dist.yml
debian/: changelog  control  copyright  cosu-trainer.install  rules
docs/: app.rc  cosu-trainer.desktop
src/: actualzip.c  actualzip.h  arconfcmd.c  arconfcmd.h  audiospeed.c  audiospeed.cpp  audiospeed.h  buffers.c  buffers.h  cleanup.c  cosumem.c  cosumem.h  cosuplatform.h  cosuplatform_linux.c  cosuplatform_win.c  cosuplatform_win.cpp  cosuui.cpp  cosuui.fl  cosuui.h  cosuwindow.cpp  cosuwindow.h  cuimain.c  cuimain.h  emptyzip.c  emptyzip.h  freader.cpp  freader.h  freader_win.cpp  freader_win.h  lsigscan.c  lsongpathparser.c  lsongpathparser.h  main.c  main.cpp  mapeditor.c  mapeditor.h  mapspeed.c  mapspeed.h  osusig_patterns.h  packeditor.c  (+12 more)
vcpp/: .gitignore  cosu-trainer.sln  cosu-trainer.vcxproj  cosu-trainer.vcxproj.filters  vcpkg.json
